src/main/java/swscale/SwscaleLibrary.java

	/**
	 * Allocates and returns a vector with just one coefficient, with<br>
	 * value 1.0.<br>
	 * Original signature : <code>SwsVector* sws_getIdentityVec()</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:242</i>
	 */
	@Mangling({"_Z18sws_getIdentityVecv", "?sws_getIdentityVec@@YAPAUSwsVector@@XZ"}) 
	SwsVector sws_getIdentityVec();
	/**
	 * Scales all the coefficients of a by the scalar value.<br>
	 * Original signature : <code>void sws_scaleVec(SwsVector*, double)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:247</i>
	 */
	@Mangling({"_Z12sws_scaleVecP9SwsVectord", "?sws_scaleVec@@YAXPAUSwsVector@@N@Z"}) 
	void sws_scaleVec(SwsVector a, double scalar);
	/**
	 * Scales all the coefficients of a so that their sum equals height.<br>
	 * Original signature : <code>void sws_normalizeVec(SwsVector*, double)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:252</i>
	 */
	@Mangling({"_Z16sws_normalizeVecP9SwsVectord", "?sws_normalizeVec@@YAXPAUSwsVector@@N@Z"}) 
	void sws_normalizeVec(SwsVector a, double height);
	/**
	 * Original signature : <code>void sws_convVec(SwsVector*, SwsVector*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:253</i>
	 */
	@Mangling({"_Z11sws_convVecP9SwsVectorP9SwsVector", "?sws_convVec@@YAXPAUSwsVector@@PAUSwsVector@@@Z"}) 
	void sws_convVec(SwsVector a, SwsVector b);
	/**
	 * Original signature : <code>void sws_addVec(SwsVector*, SwsVector*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:254</i>
	 */
	@Mangling({"_Z10sws_addVecP9SwsVectorP9SwsVector", "?sws_addVec@@YAXPAUSwsVector@@PAUSwsVector@@@Z"}) 
	void sws_addVec(SwsVector a, SwsVector b);
	/**
	 * Original signature : <code>void sws_subVec(SwsVector*, SwsVector*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:255</i>
	 */
	@Mangling({"_Z10sws_subVecP9SwsVectorP9SwsVector", "?sws_subVec@@YAXPAUSwsVector@@PAUSwsVector@@@Z"}) 
	void sws_subVec(SwsVector a, SwsVector b);
	/**
	 * Original signature : <code>void sws_shiftVec(SwsVector*, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:256</i>
	 */
	@Mangling({"_Z12sws_shiftVecP9SwsVectori", "?sws_shiftVec@@YAXPAUSwsVector@@H@Z"}) 
	void sws_shiftVec(SwsVector a, int shift);
	/**
	 * Allocates and returns a clone of the vector a, that is a vector<br>
	 * with the same coefficients as a.<br>
	 * Original signature : <code>SwsVector* sws_cloneVec(SwsVector*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:262</i>
	 */
	@Mangling({"_Z12sws_cloneVecP9SwsVector", "?sws_cloneVec@@YAPAUSwsVector@@PAUSwsVector@@@Z"}) 
	SwsVector sws_cloneVec(SwsVector a);
	/**
	 * Prints with av_log() a textual representation of the vector a<br>
	 * if log_level <= av_log_level.<br>
	 * Original signature : <code>void sws_printVec2(SwsVector*, AVClass*, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:275</i>
	 */
	@Mangling({"_Z13sws_printVec2P9SwsVectorP7AVClassi", "?sws_printVec2@@YAXPAUSwsVector@@PAUAVClass@@H@Z"}) 
	void sws_printVec2(SwsVector a, Pointer log_ctx, int log_level);
	/**
	 * Original signature : <code>void sws_freeVec(SwsVector*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:277</i>
	 */
	@Mangling({"_Z11sws_freeVecP9SwsVector", "?sws_freeVec@@YAXPAUSwsVector@@@Z"}) 
	void sws_freeVec(SwsVector a);
	/**
	 * Original signature : <code>SwsFilter* sws_getDefaultFilter(float, float, float, float, float, float, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:279</i>
	 */
	@Mangling({"_Z20sws_getDefaultFilterffffffi", "?sws_getDefaultFilter@@YAPAUSwsFilter@@MMMMMMH@Z"}) 
	SwsFilter sws_getDefaultFilter(float lumaGBlur, float chromaGBlur, float lumaSharpen, float chromaSharpen, float chromaHShift, float chromaVShift, int verbose);
	/**
	 * Original signature : <code>void sws_freeFilter(SwsFilter*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:283</i>
	 */
	@Mangling({"_Z14sws_freeFilterP9SwsFilter", "?sws_freeFilter@@YAXPAUSwsFilter@@@Z"}) 
	void sws_freeFilter(SwsFilter filter);
	/**
	 * Checks if context can be reused, otherwise reallocates a new<br>
	 * one.<br>
	 * * If context is NULL, just calls sws_getContext() to get a new<br>
	 * context. Otherwise, checks if the parameters are the ones already<br>
	 * saved in context. If that is the case, returns the current<br>
	 * context. Otherwise, frees context and gets a new context with<br>
	 * the new parameters.<br>
	 * * Be warned that srcFilter and dstFilter are not checked, they<br>
	 * are assumed to remain the same.<br>
	 * Original signature : <code>SwsContext* sws_getCachedContext(SwsContext*, int, int, PixelFormat, int, int, PixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:298</i><br>
	 * @deprecated use the safer methods {@link #sws_getCachedContext(com.sun.jna.Pointer, int, int, int, int, int, int, int, swscale.SwsFilter, swscale.SwsFilter, double[])} and {@link #sws_getCachedContext(com.sun.jna.Pointer, int, int, int, int, int, int, int, swscale.SwsFilter, swscale.SwsFilter, com.sun.jna.ptr.DoubleByReference)} instead<br>
	 * @param srcFormat @see PixelFormat<br>
	 * @param dstFormat @see PixelFormat
	 */
	@Mangling({"_Z20sws_getCachedContextP10SwsContextii11PixelFormatii11PixelFormatiP9SwsFilterP9SwsFilterPKd", "?sws_getCachedContext@@YAPA10SwsContextPA10SwsContextHH11PixelFormatHH11PixelFormatHPAUSwsFilter@@PAUSwsFilter@@PAN@Z"}) 
	@Deprecated 
	Pointer sws_getCachedContext(Pointer context, int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleByReference param);
	/**
	 * Checks if context can be reused, otherwise reallocates a new<br>
	 * one.<br>
	 * * If context is NULL, just calls sws_getContext() to get a new<br>
	 * context. Otherwise, checks if the parameters are the ones already<br>
	 * saved in context. If that is the case, returns the current<br>
	 * context. Otherwise, frees context and gets a new context with<br>
	 * the new parameters.<br>
	 * * Be warned that srcFilter and dstFilter are not checked, they<br>
	 * are assumed to remain the same.<br>
	 * Original signature : <code>SwsContext* sws_getCachedContext(SwsContext*, int, int, PixelFormat, int, int, PixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:298</i><br>
	 * @param srcFormat @see PixelFormat<br>
	 * @param dstFormat @see PixelFormat
	 */
	@Mangling({"_Z20sws_getCachedContextP10SwsContextii11PixelFormatii11PixelFormatiP9SwsFilterP9SwsFilterPKd", "?sws_getCachedContext@@YAPA10SwsContextPA10SwsContextHH11PixelFormatHH11PixelFormatHPAUSwsFilter@@PAUSwsFilter@@PAN@Z"}) 
	Pointer sws_getCachedContext(Pointer context, int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, double param[]);
	/**
	 * Converts an 8bit paletted frame into a frame with a color depth of 32-bits.<br>
	 * * The output frame will have the same packed format as the palette.<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked32(const uint8_t*, uint8_t*, long, const uint8_t*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:314</i><br>
	 * @deprecated use the safer methods {@link #sws_convertPalette8ToPacked32(byte[], java.nio.ByteBuffer, com.sun.jna.NativeLong, byte[])} and {@link #sws_convertPalette8ToPacked32(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.NativeLong, com.sun.jna.Pointer)} instead
	 */
	@Mangling({"_Z29sws_convertPalette8ToPacked32PK7uint8_tP7uint8_tlPK7uint8_t", "?sws_convertPalette8ToPacked32@@YAXPA7uint8_tPA7uint8_tJPA7uint8_t@Z"}) 
	@Deprecated 
	void sws_convertPalette8ToPacked32(Pointer src, Pointer dst, NativeLong num_pixels, Pointer palette);
	/**
	 * Converts an 8bit paletted frame into a frame with a color depth of 32-bits.<br>
	 * * The output frame will have the same packed format as the palette.<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked32(const uint8_t*, uint8_t*, long, const uint8_t*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:314</i>
	 */
	@Mangling({"_Z29sws_convertPalette8ToPacked32PK7uint8_tP7uint8_tlPK7uint8_t", "?sws_convertPalette8ToPacked32@@YAXPA7uint8_tPA7uint8_tJPA7uint8_t@Z"}) 
	void sws_convertPalette8ToPacked32(byte src[], ByteBuffer dst, NativeLong num_pixels, byte palette[]);
	/**
	 * Converts an 8bit paletted frame into a frame with a color depth of 24 bits.<br>
	 * * With the palette format "ABCD", the destination frame ends up with the format "ABC".<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked24(const uint8_t*, uint8_t*, long, const uint8_t*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:326</i><br>
	 * @deprecated use the safer methods {@link #sws_convertPalette8ToPacked24(byte[], java.nio.ByteBuffer, com.sun.jna.NativeLong, byte[])} and {@link #sws_convertPalette8ToPacked24(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.NativeLong, com.sun.jna.Pointer)} instead
	 */
	@Mangling({"_Z29sws_convertPalette8ToPacked24PK7uint8_tP7uint8_tlPK7uint8_t", "?sws_convertPalette8ToPacked24@@YAXPA7uint8_tPA7uint8_tJPA7uint8_t@Z"}) 
	@Deprecated 
	void sws_convertPalette8ToPacked24(Pointer src, Pointer dst, NativeLong num_pixels, Pointer palette);
	/**
	 * Converts an 8bit paletted frame into a frame with a color depth of 24 bits.<br>
	 * * With the palette format "ABCD", the destination frame ends up with the format "ABC".<br>
	 * * @param src        source frame buffer<br>
	 * @param dst        destination frame buffer<br>
	 * @param num_pixels number of pixels to convert<br>
	 * @param palette    array with [256] entries, which must match color arrangement (RGB or BGR) of src<br>
	 * Original signature : <code>void sws_convertPalette8ToPacked24(const uint8_t*, uint8_t*, long, const uint8_t*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:326</i>
	 */
	@Mangling({"_Z29sws_convertPalette8ToPacked24PK7uint8_tP7uint8_tlPK7uint8_t", "?sws_convertPalette8ToPacked24@@YAXPA7uint8_tPA7uint8_tJPA7uint8_t@Z"}) 
	void sws_convertPalette8ToPacked24(byte src[], ByteBuffer dst, NativeLong num_pixels, byte palette[]);
	/// Undefined type
	public static interface SwsContext {
		
	};
}
